# simplicity-winapi

simplicity-winapi/: CMakeLists.txt  simplicity-winapi.vcxproj
simplicity-winapi/src/main/c++/simplicity/winapi/: API.h
simplicity-winapi/src/main/c++/simplicity/winapi/input/: WinAPIInputEvents.cpp  WinAPIInputEvents.h
simplicity-winapi/src/main/c++/simplicity/winapi/windowing/: WinAPIEngine.cpp  WinAPIEngine.h
